# bifrost

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .snyk  AGENTS.md  HELM_SETUP.md  Makefile  README.md  SECURITY.md  bifrost.go  flake.nix  go.mod  postgres-values.yaml  readMe.md
.github/: CODEOWNERS  dependabot.yml
.next/: trace
.stainless/: stainless.yml  workspace.json
cli/: changelog.md  go.mod  go.sum  main.go
core/: bifrost.go  bifrost_test.go  changelog.md  chatbot_test.go  go.mod  go.sum  logger.go  mcp.go  mcp_inprocess_test.go  utils.go  version
docs/: .mintignore  README.md  README.mdx  benchmarks.md  benchmarks.mdx  ci-pipeline.md  ci-pipeline.mdx  core-package.md  docs.json  fallbacks.md  governance.md  governance.mdx  http-transport-api.md  intercom.js  logger.md  mcp.md  mcp.mdx  memory-management.md  openapi.json  overview.mdx  plugins.md  plugins.mdx  providers.md  security.mdx  style.css  supportWidget.js  system-architecture.md
examples/plugins/hello-world-wasm-rust/: Cargo.toml  Makefile  README.md
examples/plugins/hello-world-wasm-rust/src/: lib.rs  memory.rs  types.rs
framework/: changelog.md  config.go  docker-compose.yml  go.mod  go.sum  version
helm-charts/: INSTALL.md  README.md  bifrost-2.0.10.tgz  bifrost-2.0.11.tgz  bifrost-2.0.12.tgz  bifrost-2.0.13.tgz  bifrost-2.0.14.tgz  bifrost-2.0.2.tgz  bifrost-2.0.3.tgz  bifrost-2.0.4.tgz  bifrost-2.0.7.tgz  bifrost-2.0.8.tgz  index.yaml
interfaces/: account.go  provider.go
npx/: bin.js  package.json
plugins/: go.mod  go.sum  (+1 more)
(+2479 files in other folders)
